Replace deprecated method at Java9